* concept list, using icons from designer, fixing bugs with navigation with   buttons, shifting concepts into view on list when next results in current   concept no longer being visible
git-svn-id: https://gtsvn.uit.no/langtech/trunk/apps/aajege@81440 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/sma-client/app/styles/concept_list.styl
+++ b/src/sma-client/app/styles/concept_list.styl
@@ -3,9 +3,9 @@
     #nav_buttons
         display: block
         width: 60%
+        margin: 2em auto 0 auto
 
         ul
-            margin: 0 auto 0 auto
             padding: 0 0 0 0
 
             height: 40px
@@ -17,6 +17,7 @@
             li
                 display: block
                 float: left
+                padding: 0 1px 0 0
                 
                 // span.text_icon
                 //     display: block
